# zero2prod_axum

./: .env  Cargo.toml  LICENSE.BSD-2  README.md  rustfmt.toml  settings.local.toml  settings.production.toml
.sqlx/: query-bcfcfebc6f5e8ffbf97d97c5a209be78b46d703924482cf8b43842705fcb7714.json
docker/: Dockerfile
migrations/: 20240429213625_create_signup_table.sql  20241123212103_make_status_not_null_in_subscriptions.sql  20241129054743_fix_subscriptions_tokens_table_id_type.sql  20241212051847_create_users_table.sql  20241215204836_fix_user_table_column_name.sql  20241215212259_rename_password_column.sql  20241217203640_remove_salt_from_users.sql
scripts/: init_db.sh
src/: authentication.rs  domain.rs  email_client.rs  lib.rs  main.rs  routes.rs  settings.rs  startup.rs  telemetry.rs  test_utils.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: health_check.rs  home.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/home/: home.html
src/routes/login/: get.rs  login.html  post.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
