[package]
name = "zero2prod_axum"
version = "0.1.0"
authors = ["David Kalliecharan"]
edition = "2021"
license = "Apache-2.0 or BSD-2-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod_axum"

[dependencies]
axum = "0.7.5"
chrono = { version = "0.4.38", default-features = false, features = ["clock"] }
clap = { version = "4.5.4", features = ["derive"] }
serde = { version = "1.0.199", features = ["derive"] }
sqlx = { version = "0.7.4", features = ["sqlite", "runtime-tokio", "tls-rustls", "migrate", "uuid"] }
tokio = { version = "1.37.0", features = ["full", "tracing"] }
toml = "0.8.12"
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.40"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
tracing-bunyan-formatter = "0.3.9"
uuid = { version = "1.8.0", features = ["v4"] }
secrecy = { version = "0.8.0", features = ["serde"] }
unicode-segmentation = "1.11.0"
claims = "0.7.1"
validator = "0.18.1"
rand = "0.8.5"
reqwest = { version = "0.12.4", default-features = false, features = ["json", "rustls-tls"] }
fake = "3.0.0"
[dev-dependencies]
axum = "0.7.5"
http-body-util = "0.1.1"
once_cell = "1.19.0"
tokio = { version = "1.37.0", features = ["rt", "macros"] }
tower = "0.4.13"
wiremock = "0.6.2"
proptest = "1.5.0"
serde_json = "1.0.132"
